Opened 4 years ago

Closed 3 years ago

#16625 closed bug (fixed)

[Tracker] context menus use plain font instead of menu font

Reported by: diver Owned by: nobody
Priority: normal Milestone: R1/beta4
Component: Applications/Tracker Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description (last modified by diver)

Attachments (1)

tracker.png (405.9 KB ) - added by diver 4 years ago.

Download all attachments as: .zip

Change History (4)

by diver, 4 years ago

Attachment: tracker.png added

comment:1 by diver, 4 years ago

Description: modified (diff)

comment:2 by waddlesplash, 3 years ago

That code has been there since the very first import of OpenTracker into source control in 2001. I wonder why? Maybe we can just delete it and hope nothing breaks?

comment:3 by waddlesplash, 3 years ago

Milestone: UnscheduledR1/beta4
Resolution: fixed
Status: newclosed

Fixed in hrev56503.

Note: See TracTickets for help on using tickets.